for publishing purposes

--- a/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
@@ -4,7 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <main>
     <img src="~/images/ad.png" alt="project advertisement image" />
 
@@ -24,8 +23,8 @@
         <h2>Github & Winhost</h2>
         <p>The application is currently hosted on Winhost with a github repository. See the details below for more information:</p>
         <h3>Github Repository</h3>
-        <a href="https://github.com/xaviermercado/OneListPhase1">Check Out Our Github Now!</a>
-        <h3>Winhost Link</h3>
+        <a href="https://github.com/xaviermercado/OneListPhase1">Check Out Our Github</a>
+        <h3>Site Link</h3>
         <a href="http://takethisapart.com/onelist ">Visit Our Site</a>
     </section>
     <section>
