--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -58,12 +58,14 @@
                         <h4>To Do</h4>
                         <ul>
                             <li><a href="#">Brainstorm: What to show on dashboard page</a></li>
+                            <li><a href="#">API: Edit API page for 3rd party</a></li>
                             <li><a href="#">API: Only show valid coupons</a></li>
                             <li><a href="#">API: Add scroll</a></li>
                             <li><a href="#">API: Add loading button</a></li>
                             <li><a href="#">CSS: mobile responsive</a></li>
                             <li><a href="#">Validation: Add Validation/Error message for all</a></li>
                             <li><a href="#">Validation: User Profile Edit currently not server side validation</a></li>
+                            <li><a href="#">Add ReadMe on Github/Packaging guide</a></li>
                         </ul>
                     </div>
                 </div>
