--- a/OneListApplication/OneListApplication/Views/Home/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="project-description">
     <div>
         <h1>Welcome to the OneList!</h1>
-        <h4>Check Out Our<a href="~/Home/GetDesignDocument"> Design Document</a></h4>
+        <h4>Check out our<a href="~/Home/GetDesignDocument"> Design Document</a></h4>
     </div>
     <p>Task Managment web application built to help you organize daily tasks, increase efficency with OneList today.</p>
     <table class="table table-striped">
@@ -34,4 +34,9 @@
     </table>
     <p><a class="btn btn-bk btn-lg" href="@Url.Action("Register", "Home")" role="button">Register Now</a></p>
     <p class="text-red">Latest Build - @ViewBag.date</p>
+    <div>
+        <h3>Coupon API</h3>
+        <h4>Check out our<a href="~/Home/APIdocument"> API User Guide</a></h4>
+        <p>Designed for local grocery stores and general office supply vendors. Easy implementation and instant result.</p>
+    </div>
 </div>
