--- a/OneListApplication/OneListApplication/Views/Home/APIdocument.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/APIdocument.cshtml
@@ -19,7 +19,7 @@
         <p>Easy implementation, minimum learning required. Follow the steps listed below:</p>
         <ol>
             <li>Be sure to include only valid coupons</li>
-            <li>Add/Update/Delete coupons using JavaScript code sample below</li>
+            <li>Add/Update/Delete coupons <a href="~/Developer"> here</a></li>
             <li>
                 Use PostMan to check results
                 http://takethisapart.com/onelist/api/coupons
