--- a/OneListApplication/OneListApplication/Views/Developer/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Developer/Index.cshtml
@@ -2,6 +2,7 @@
 <script src="~/Scripts/app.js"></script>
 @{
     ViewBag.Title = "Developer's Guide";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <main>
     <h2 class="col-lg-12 col-lg-offset-1" id="title">Manage your coupons</h2>
@@ -109,7 +110,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="button" class="btn-bk" value="Add" onclick="update();" />
+                    <input type="button" class="btn-bk" value="Update" onclick="update();" />
                     <div class="col-md-6">
                         <p id="couponUpdate" />
                     </div>
