--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -56,16 +56,34 @@
                         <div class="big-button">@Html.ActionLink("Item Mangement", "ItemManagement", "Item")</div>
                         <div class="big-button">@Html.ActionLink("Subscriber Management", "SubscriberGroupManagement", "Subscriber")</div>*@
                         <h4>To Do</h4>
+                        <p>*Please get the lastest build</p>
+                        <p>*Will be on slack tonight for any fixes needed</p>
                         <ul>
-                            <li><a href="#">Brainstorm: What to show on dashboard page</a></li>
-                            <li><a href="#">API: Edit API page for 3rd party</a></li>
-                            <li><a href="#">API: Only show valid coupons</a></li>
-                            <li><a href="#">API: Add scroll</a></li>
-                            <li><a href="#">API: Add loading button</a></li>
-                            <li><a href="#">CSS: mobile responsive</a></li>
-                            <li><a href="#">Validation: Add Validation/Error message for all</a></li>
-                            <li><a href="#">Validation: User Profile Edit currently not server side validation</a></li>
+                            <li><a href="#">Brainstorm: What to show on dashboard page(X+N+M)</a></li>
+                            <li><a href="#">List: Complete Lists tab unused?(X)</a></li>
+                            <li><a href="#">List: Error when adding multiple group(X)</a></li>
+                            <li><a href="#">List: Redirect after succesfully adding list(X)</a></li>
+                            <li><a href="#">List: Cannot edit list name(X)</a></li>
+                            <li><a href="#">List: Cannot edit list type(X)</a></li>
+                            <li><a href="#">List: Cannot edit list subscriber groups(X)</a></li>
+                            <li><a href="#">List: Blue 'check' button not working(X)</a></li>
+                            <li><a href="#">List: Cannot complete list(X)</a></li>
+                            <li><a href="#">API: Show Retailer on API(X)</a></li>
+                            <li><a href="#">API: Only show valid coupons(X)</a></li>
+                            <li><a href="#">API: Add scroll(X)</a></li>
+                            <li><a href="#">API: Add loading button(X)</a></li>
+                            <li><a href="#">API: Modify api page and developer page after api changes are made(M)</a></li>
+                            <li><a href="#">CSS: mobile responsive(M)</a></li>
+                            <li><a href="#">Validation: Add Validation/Error message for all(N)</a></li>
+                            <li><a href="#">Validation: User Profile Edit currently not server side validation(N)</a></li>
                             <li><a href="#">Add ReadMe on Github/Packaging guide</a></li>
+                            <li><a href="#">Handin: Make sure SQL document is up-to-date</a></li>
+                            <li><a href="#">Handin: Documentation on how to install this project(M)</a></li>
+                            <li><a href="#">Handin: Modify functional requirement docs on design document(M)</a></li>
+                            <li><a href="#">Handin: Functional checklist</a></li>
+                            <li><a href="#">Handin: Formatting</a></li>
+                            <li><a href="#">Handin: Packaging</a></li>
+                            <li><a href="#">Handin: Change user/admin name and password</a></li>
                         </ul>
                     </div>
                 </div>
