--- a/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "CreateList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @Html.Partial("~/Views/List/_ListSideBar.cshtml")
 
-
-<div class="col-md-8">
+<div class="col-md-8 col-sm-12">
     <h2>Create List</h2>
     <p class="text-danger">
         @Html.Raw(ViewBag.ErrorMsg)
@@ -31,8 +31,8 @@
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.ListType, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-xs-10">
-                    <select class="form-control" name="ListType">
+                <div class="col-md-10">
+                    <select name="ListType">
                         @foreach (var item in Model.ListType)
                 {
                             <option value="@item.ListTypeID">@item.TypeName</option>
@@ -42,8 +42,8 @@
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.ItemCategory, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-xs-10">
-                    <select class="form-control" name="ItemCategory">
+                <div class="col-md-10">
+                    <select name="ItemCategory">
                         @foreach (var item in Model.ItemCategory)
                 {
                             <option value="@item.ItemCategoryID">@item.ItemCategoryName</option>
@@ -53,8 +53,9 @@
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.SuscriberGroup, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-xs-10">
-                    <select multiple class="form-control" id="Groups" name="SuscriberGroup">
+                <p class="col-md-10">Hold Shift to select multiple</p>
+                <div class="col-md-10">
+                    <select multiple id="Groups" name="SuscriberGroup">
                         @foreach (var item in Model.SuscriberGroup)
                 {
                             <option value="@item.SuscriberGroupID">@item.SuscriberGroupName</option>
@@ -64,7 +65,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-bk" />
                 </div>
             </div>
         </div>
