--- a/OneListApplication/OneListApplication/Views/List/EditList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/EditList.cshtml
@@ -6,7 +6,7 @@
 }
 
 @Html.Partial("~/Views/List/_ListSideBar.cshtml")
-<div class="col-md-8">
+<div class="col-md-8 col-sm-12">
     <p class="text-danger">
         @Html.Raw(ViewBag.ErrorMsg)
     </p>
