--- a/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
@@ -6,7 +6,7 @@
 }
 
 @Html.Partial("~/Views/List/_ListSideBar.cshtml")
-<div class="col-md-8">
+<div class="col-md-8 col-sm-12">
     <h2>List Management</h2>
     <p class="text-danger">
         @Html.Raw(ViewBag.ErrorMsg)
@@ -53,7 +53,7 @@
                 <td>
                     @if (item.UserType != 3)
                     {
-                        @Html.ActionLink("Edit List", "EditList", "List", new { id = item.ListID }, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Edit List", "EditList", "List", new { id = item.ListID }, new { @class = "btn btn-bk" })
                     }
                     
                     <a class="btn btn-warning" href="@Url.Action("EditList","List",  new { id = item.ListID})"><i class="fa fa-eye" aria-hidden="true"></i></a>
