--- a/OneListApplication/OneListApplication/Views/List/_ListSideBar.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/_ListSideBar.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="col-md-4">
+<div class="col-md-4 col-sm-12">
     <ul class="nav navbar-nav side-nav">
         <li class="active">
             <a class="nav-link active" href="@Url.Action("ListManagement", "Home")"><i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;&nbsp;Current Lists</a>
