--- a/OneListApplication/OneListApplication/Content/Site.css
+++ b/OneListApplication/OneListApplication/Content/Site.css
@@ -13,12 +13,12 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 100%;
 }
-
-@media(max-width:992px) {
+@media(min-width:992px) {
     input,
+    select,
     textarea {
-        max-width: none;
+        max-width: 280px;
     }
 }
