--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -74,17 +74,15 @@
                             <li><a href="#">API: Show Retailer on API(X)</a></li>
                             <li><a href="#">API: Only show valid coupons(X)</a></li>
                             <li><a href="#">API: Add scroll(X)</a></li>
-                            <li><a href="#">API: Add loading button(X)</a></li>
-                            <li><a href="#">CSS: mobile responsive(M)</a></li>
                             <li><a href="#">Validation: Add Validation/Error message for all(N)</a></li>
                             <li><a href="#">Validation: User Profile Edit no server side validation(N)</a></li>
                             <li><a href="#">Handin: Make sure SQL document is up-to-date(X)</a></li>
+                            <li><a href="#">Handin: Update ERD for SQL, it's been modified(X)</a></li>
                             <li><a href="#">Handin: Documentation on how to install this project(M)</a></li>
-                            <li><a href="#">Handin: Modify functional requirement docs on design document(M)</a></li>
-                            <li><a href="#">Handin: Review functional checklist</a></li>
+                            <li><a href="#">Handin: Review functional checklist(X+M+N)</a></li>
                             <li><a href="#">Handin: Formatting(M)</a></li>
-                            <li><a href="#">Handin: Packaging</a></li>
-                            <li><a href="#">Handin: Change user/admin name and password(M)</a></li>
+                            <li><a href="#">Handin: Packaging(M)</a></li>
+                            <li><a href="#">Handin: Change user/admin name and password(N)</a></li>
                             <li><a href="#">Add ReadMe on Github/Packaging guide(M)</a></li>
                         </ul>
                     </div>
@@ -142,7 +140,9 @@
 
             <div id="coupon" class="col-lg-4">
                 <h3>Our Specials</h3>
-                <span id='value1'><br /></span>
+                <span id='value1'>
+                   <i class="fa fa-refresh" aria-hidden="true"></i>Loading coupons 
+                </span>
             </div>
             <!-- /#page-wrapper -->
         </div>
