--- a/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
@@ -5,64 +5,65 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.Partial("~/Views/List/_ListSideBar.cshtml")
-<div class="col-md-8 col-sm-12">
-    <h2>List Management</h2>
-    <p class="text-danger">
-        @Html.Raw(ViewBag.ErrorMsg)
-    </p>
-    <p class="text-info">
-        @Html.Raw(ViewBag.ActionMsg)
-    </p>
-    <table class="table table-collapse">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.ListName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CreationDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ListType)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.SuscriberGroup)
-                </th>
-
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-
-            @foreach (var item in Model)
-            {
+<main>
+    @Html.Partial("~/Views/List/_ListSideBar.cshtml")
+    <div class="col-md-8 col-sm-12">
+        <h2>List Management</h2>
+        <p class="text-danger">
+            @Html.Raw(ViewBag.ErrorMsg)
+        </p>
+        <p class="text-info">
+            @Html.Raw(ViewBag.ActionMsg)
+        </p>
+        <table class="table table-collapse">
+            <thead>
                 <tr>
-                    <td data-title="Name">
-                        @Html.DisplayFor(modelItem => item.ListName)
-                    </td>
-                    <td data-title="Date">
-                        @Html.DisplayFor(modelItem => item.CreationDate)
-                    </td>
-                    <td data-title="Type">
-                        @Html.DisplayFor(modelItem => item.ListType)
-                    </td>
-                    <td data-title="Suscribers">
-                        <ul id="suscribers">
-                            @foreach (var groups in item.SuscriberGroup)
-                            {
-                                <li>@groups.SuscriberGroupName</li>
-                            }
-                        </ul>
-                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ListName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CreationDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ListType)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.SuscriberGroup)
+                    </th>
 
-                    <td data-title="Actions">
-                        @Html.ActionLink("Edit List", "EditList", "List", new { id = item.ListID }, new { @class = "btn btn-bk" })
-                        <a class="btn btn-danger" href="@Url.Action("DeleteList","List",  new { id = item.ListID})"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-                    </td>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
+            </thead>
+            <tbody>
 
-</table>
-</div>
+                @foreach (var item in Model)
+            {
+                    <tr>
+                        <td data-title="Name">
+                            @Html.DisplayFor(modelItem => item.ListName)
+                        </td>
+                        <td data-title="Date">
+                            @Html.DisplayFor(modelItem => item.CreationDate)
+                        </td>
+                        <td data-title="Type">
+                            @Html.DisplayFor(modelItem => item.ListType)
+                        </td>
+                        <td data-title="Suscribers">
+                            <ul id="suscribers">
+                                @foreach (var groups in item.SuscriberGroup)
+                                {
+                                    <li>@groups.SuscriberGroupName</li>
+                                }
+                            </ul>
+                        </td>
+
+                        <td data-title="Actions">
+                            @Html.ActionLink("Edit List", "EditList", "List", new { id = item.ListID }, new { @class = "btn btn-bk" })
+                            <a class="btn btn-danger" href="@Url.Action("DeleteList","List",  new { id = item.ListID})"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</main>
