--- a/OneListApplication/OneListApplication/Views/List/ShowAllList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowAllList.cshtml
@@ -3,7 +3,7 @@
 <p>
     @Html.ActionLink("Create New List", "CreateList","List")
 </p>
-<table class="table table-collapse">
+<table class="table table-collapse table-striped">
     <thead>
         <tr>
             <th>
@@ -14,9 +14,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreationDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ListStatusID)
             </th>
             <th></th>
         </tr>
@@ -34,9 +31,6 @@
             </td>
             <td data-title="Creation Date">
                 @Html.DisplayFor(modelItem => item.CreationDate)
-            </td>
-            <td data-title="List Status">
-                @Html.DisplayFor(modelItem => item.ListStatusID)
             </td>
             <td>
                 @Html.ActionLink("Edit List", "EditList", "List", new { id = item.ListID }, new { @class = "btn btn-bk" })
