--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -45,7 +45,7 @@
             <div class="col-lg-8">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="page-header">
+                        <h2>
                             Hey, @Html.Raw(User.Identity.Name)
                         </h2>
                     </div>
@@ -60,7 +60,6 @@
                         }
                         <h4>To Do</h4>
                         <p>*Please get the lastest build</p>
-                        <p>*Will be on slack tonight for any fixes needed</p>
                         <ul>
                             <li><a href="#">List-Sidebar: Complete Lists tab unused?(X)</a></li>
                             <li><a href="#">List-Create: Error when adding multiple group(X)</a></li>
@@ -76,6 +75,7 @@
                             <li><a href="#">API: Add scroll(X)</a></li>
                             <li><a href="#">Validation: Add Validation/Error message for all(N)</a></li>
                             <li><a href="#">Validation: User Profile Edit no server side validation(N)</a></li>
+                            <li><a href="#">Handin: Clean Dummy data(M)</a></li>
                             <li><a href="#">Handin: Make sure SQL document is up-to-date(X)</a></li>
                             <li><a href="#">Handin: Update ERD for SQL, it's been modified(X)</a></li>
                             <li><a href="#">Handin: Documentation on how to install this project(M)</a></li>
