--- a/OneListApplication/OneListApplication/Css/index.css
+++ b/OneListApplication/OneListApplication/Css/index.css
@@ -223,7 +223,7 @@ footer {
     max-height:none !important;
 }
 #dropdownMenu1 {
-    margin-top:18px;
+    margin-top:12px;
 }
 
 @media(max-width:768px){
@@ -361,7 +361,7 @@ footer {
     background-color: white !important;
     border-radius: 15px;
     box-shadow: 1px 1px 3px #999;
-    padding: 15px;
+    padding: 15px 20px;
 }
 
 /* individual backend pages */
