--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -62,19 +62,20 @@
                         <p>*Please get the lastest build</p>
                         <p>*Will be on slack tonight for any fixes needed</p>
                         <ul>
-                            <li><a href="#">List-Sidebar: Complete Lists tab unused?(X)</a></li>
-                            <li><a href="#">List-Create: Error when adding multiple group(X)</a></li>
-                            <li><a href="#">List-Create: Redirect after succesfully adding list(X)</a></li>
-                            <li><a href="#">List-Edit: Make List Role not input, should not edit</a></li>
-                            <li><a href="#">List-Edit: Cannot edit list name(X)</a></li>
-                            <li><a href="#">List-Edit: Cannot edit list type(X)</a></li>
-                            <li><a href="#">List-Edit: Cannot edit list subscriber groups(X)</a></li>
-                            <li><a href="#">List-Edit: Blue 'check' button not working(X)</a></li>
-                            <li><a href="#">List-Edit: Cannot complete list(X)</a></li>
+                            <li><a href="#">List-Sidebar: Complete Lists tab unused?(X)DONE!</a></li>
+                            <li><a href="#">List-Create: Error when adding multiple group(X)DONE</a></li>
+                            <li><a href="#">List-Create: Redirect after succesfully adding list(X)DONE</a></li>
+                            <li><a href="#">List-Edit: Make List Role not input, should not edi(X)DONEt</a></li>
+                            <li><a href="#">List-Edit: Cannot edit list name(X)DONE</a></li>
+                            <li><a href="#">List-Edit: Cannot edit list type(X)DONE</a></li>
+                            <li><a href="#">List-Edit: Feature to add a list item only for one list(X)</a></li>
+                            <li><a href="#">List-Edit: Cannot edit list subscriber groups(X)(DONE)</a></li>
+                            <li><a href="#">List-Edit: Blue 'check' button not working(X)(DONE)</a></li>
+                            <li><a href="#">List-Edit: Cannot complete list(X)DONE</a></li>
                             <li><a href="#">API: Show Retailer on API(X)</a></li>
-                            <li><a href="#">API: Only show valid coupons(X)</a></li>
-                            <li><a href="#">API: Add scroll(X)</a></li>
-                            <li><a href="#">API: Add loading button(X)</a></li>
+                            <li><a href="#">API: Only show valid coupons(X)(DONE)</a></li>
+                            <li><a href="#">API: Add scroll(X)(DONE)</a></li>
+                            <li><a href="#">API: Add loading button(X)(DONE)</a></li>
                             <li><a href="#">CSS: mobile responsive(M)</a></li>
                             <li><a href="#">Validation: Add Validation/Error message for all(N)</a></li>
                             <li><a href="#">Validation: User Profile Edit no server side validation(N)</a></li>
@@ -140,9 +141,11 @@
                 <!-- /.container-fluid -->
             </div>
 
-            <div id="coupon" class="col-lg-4">
+            <div id="coupon" class="col-lg-4 pre-scrollable" >
                 <h3>Our Specials</h3>
-                <span id='value1'><br /></span>
+                <span id='value1'><br />
+                    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+                </span>
             </div>
             <!-- /#page-wrapper -->
         </div>
