--- a/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
@@ -10,9 +10,11 @@
     <h2>List Management</h2>
     <p class="text-danger">
         @Html.Raw(ViewBag.ErrorMsg)
+        @Html.Raw(TempData["ErrorMsg"])
     </p>
     <p class="text-info">
         @Html.Raw(ViewBag.ActionMsg)
+        @Html.Raw(TempData["ActionMsg"])
     </p>
     <table class="table table-collapse">
         <thead>
