--- a/OneListApplication/OneListApplication/Views/List/_ListSideBar.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/_ListSideBar.cshtml
@@ -8,7 +8,7 @@
             <a class="nav-link" href="@Url.Action("CreateList", "List")"><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;Create List</a>
         </li>
         <li>
-            <a class="nav-link" href="@Url.Action("ShowCompleteList", "List")"><i class="fa fa-archive" aria-hidden="true"></i>Complete Lists</a>
+            <a class="nav-link" href="@Url.Action("ShowCompleteList", "List")"><i class="fa fa-archive" aria-hidden="true"></i>Completed Lists</a>
         </li>
         <li>
             <a class="nav-link" href="@Url.Action("ShowSubscribedList", "List")"><i class="fa fa-list-alt" aria-hidden="true"></i>Subscribed Lists</a>
