--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -61,18 +61,18 @@
                         <h4>To Do</h4>
                         <p>*Please get the lastest build</p>
                         <ul>
-                            <li><a href="#">List-Sidebar: Complete Lists tab unused?(X)</a></li>
-                            <li><a href="#">List-Create: Error when adding multiple group(X)</a></li>
-                            <li><a href="#">List-Create: Redirect after succesfully adding list(X)</a></li>
-                            <li><a href="#">List-Edit: Make List Role not input, should not edit</a></li>
-                            <li><a href="#">List-Edit: Cannot edit list name(X)</a></li>
-                            <li><a href="#">List-Edit: Cannot edit list type(X)</a></li>
-                            <li><a href="#">List-Edit: Cannot edit list subscriber groups(X)</a></li>
+                            <li><a href="#">List-Sidebar: Complete Lists tab unused?(X)DONE</a></li>
+                            <li><a href="#">List-Create: Error when adding multiple group(X)DONE</a></li>
+                            <li><a href="#">List-Create: Redirect after succesfully adding list(X)DONE</a></li>
+                            <li><a href="#">List-Edit: Make List Role not input, should not edit(X)DONE</a></li>
+                            <li><a href="#">List-Edit: Cannot edit list name(X)DONE</a></li>
+                            <li><a href="#">List-Edit: Cannot edit list type(X)DONE</a></li>
+                            <li><a href="#">List-Edit: Cannot edit list subscriber groups(X)DONE</a></li>
                             <li><a href="#">List-Edit: Blue 'check' button not working(X)</a></li>
-                            <li><a href="#">List-Edit: Cannot complete list(X)</a></li>
+                            <li><a href="#">List-Edit: Cannot complete list(X)(DONE)</a></li>
                             <li><a href="#">API: Show Retailer on API(X)</a></li>
-                            <li><a href="#">API: Only show valid coupons(X)</a></li>
-                            <li><a href="#">API: Add scroll(X)</a></li>
+                            <li><a href="#">API: Only show valid coupons(X)DONE</a></li>
+                            <li><a href="#">API: Add scroll(X)(DONE)</a></li>
                             <li><a href="#">Validation: Add Validation/Error message for all(N)</a></li>
                             <li><a href="#">Validation: User Profile Edit no server side validation(N)</a></li>
                             <li><a href="#">Handin: Clean Dummy data(M)</a></li>
@@ -138,7 +138,7 @@
                 <!-- /.container-fluid -->
             </div>
 
-            <div id="coupon" class="col-lg-4">
+            <div id="coupon" class="col-lg-4 pre-scrollable">
                 <h3>Our Specials</h3>
                 <span id='value1'>
                    <i class="fa fa-refresh" aria-hidden="true"></i>Loading coupons 
