change error message placement

--- a/OneListApplication/OneListApplication/Css/index.css
+++ b/OneListApplication/OneListApplication/Css/index.css
@@ -72,6 +72,10 @@ pre {
     padding: 10px 20px !important;
 }
 
+.message-align-center {
+    text-align: center;
+}
+
 /*  footer */
 footer {
     margin-top: 30px;
