--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -73,20 +73,25 @@
                             <li><a href="#">API: Show Retailer on API(X)</a></li>
                             <li><a href="#">API: Only show valid coupons(X)</a></li>
                             <li><a href="#">API: Add scroll(X)</a></li>
+                            <li><a href="#">Reset Password: Error -> reset when logged in not working(N)</a></li>
+                            <li><a href="#">Forgot Password: Error -> reset after opening link not working(N)</a></li>
+                            <li><a href="#">Forgot Password: change sender from Nick to something else(N)</a></li>
+                            <li><a href="#">Forgot Password: emailed link has some weird HTML(N)</a></li>
                             <li><a href="#">Validation: Add Validation/Error message for all(N)</a></li>
                             <li><a href="#">Validation: User Profile Edit no server side validation(N)</a></li>
                             <li><a href="#">Handin: Test installation with documentation shared(N)</a></li>
                             <li><a href="#">Handin: Create admin named Admin(N)</a></li>
                             <li><a href="#">Handin: Make sure SQL document is up-to-date(X)</a></li>
                             <li><a href="#">Handin: Update ERD for SQL, it's been modified(X)</a></li>
-                            <li><a href="#">Handin: Review functional checklist(X+M+N)</a></li>
                             <li><a href="#">Handin: Feed/Admin controller + Admin view folder cleanup(M)</a></li>
+                            <li><a href="#">Handin: Check all error message location(M)</a></li>
                             <li><a href="#">Handin: Check commented out codes(M)</a></li>
                             <li><a href="#">Handin: Clean Home.cshtml(M)</a></li>
                             <li><a href="#">Handin: Formatting(M)</a></li>
                             <li><a href="#">Handin: Packaging(M)</a></li>
                             <li><a href="#">Handin: Clean Dummy data(M)</a></li>
                             <li><a href="#">Add ReadMe on Github/Packaging guide(M)</a></li>
+                            <li><a href="#">Handin: Review functional checklist(X+M+N)</a></li>
                         </ul>
                     </div>
                 </div>
