--- a/OneListApplication/OneListApplication/Views/Home/Register.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Register.cshtml
@@ -33,7 +33,9 @@
                         <button class="btn btn-bk btn-register" type="submit">Register</button><br />
                     </div>
                 }
-                @Html.Raw(ViewBag.Result)
+                <p class="message-align-center">
+                    @Html.Raw(ViewBag.Result)
+                </p>
             </div>
         </div>
     </div>
