updated to-do list

--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -73,6 +73,12 @@
                             <li><a href="#">API: Show Retailer on API(X)</a></li>
                             <li><a href="#">API: Only show valid coupons(X)DONE</a></li>
                             <li><a href="#">API: Add scroll(X)(DONE)</a></li>
+                            <li><a href="#">Reset password: Error -> not working when logged in(N)</a></li>
+                            <li><a href="#">Confirm Email: Email sent from Nick, change to something else(N)</a></li>
+                            <li><a href="#">Confirm Email: anchor tag not working(N)</a></li>
+                            <li><a href="#">Forgot password: Email -> change sender name from Nick to noreply...(N)</a></li>
+                            <li><a href="#">Forgot password: Email -> fix the anchor tag(N)</a></li>
+                            <li><a href="#">Forgot password: Error -> not working(N)</a></li>
                             <li><a href="#">Validation: Add Validation/Error message for all(N)</a></li>
                             <li><a href="#">Validation: User Profile Edit no server side validation(N)</a></li>
                             <li><a href="#">Handin: Test installation with documentation shared(N)</a></li>
